Fixed alignment of header

--- a/my-app/src/styles/default.css
+++ b/my-app/src/styles/default.css
@@ -24,7 +24,8 @@ body {
 
 .header h1 {
   position: absolute;
-  left: 37.8%;
+  width: 100%;
+  text-align: center;
 }
 
 .logo img {
